[workspace]
resolver = "2"

members = [
    "packages/core/nros",
    "packages/core/nros-core",
    "packages/core/nros-serdes",
    "packages/core/nros-macros",
    "packages/core/nros-params",
    "packages/core/nros-rmw",
    "packages/core/nros-node",
    # Build-script helper: extracts Rust type sizes from a compiled rlib so
    # nros-c/nros-cpp can size their opaque storage from Rust's size_of.
    "packages/core/nros-sizes-build",
    # Zenoh-pico FFI bindings
    "packages/zpico/zpico-sys",
    # Free-list allocator for z_malloc/z_free on bare-metal
    "packages/zpico/zpico-alloc",
    # XRCE-DDS FFI bindings
    "packages/xrce/xrce-sys",
    # Zenoh RMW backend (shim + zpico wrapper)
    "packages/zpico/nros-rmw-zenoh",
    # DDS RMW backend (pure Rust, dust-dds)
    "packages/dds/nros-rmw-dds",
    # Integration tests
    "packages/testing/nros-tests",
    # C API for embedded systems
    "packages/core/nros-c",
    # C++ API (header-only C++14 library + Rust FFI staticlib)
    "packages/core/nros-cpp",
    # LAN9118 Ethernet driver for smoltcp
    "packages/drivers/lan9118-smoltcp",
    # Generated ROS 2 interface types (rcl_interfaces, builtin_interfaces).
    # Required by nros-node's param-services feature. Checked into git because
    # cargo requires workspace member paths to exist on disk.
    "packages/interfaces/rcl-interfaces/generated/humble/nros-builtin-interfaces",
    "packages/interfaces/rcl-interfaces/generated/humble/nros-rcl-interfaces",
    "packages/interfaces/lifecycle-msgs/generated/humble/nros-lifecycle-msgs",
    # C function table adapter for third-party RMW backends
    "packages/core/nros-rmw-cffi",
    # Ghost model types for verification (shared between production tests and Verus proofs)
    "packages/verification/nros-ghost-types",
    # Unified platform abstraction
    "packages/core/nros-platform",
    "packages/core/nros-platform-api",
    "packages/core/nros-platform-cffi",
    "packages/core/nros-platform-posix",
    "packages/core/nros-platform-nuttx",
    "packages/core/nros-platform-freertos",
    "packages/core/nros-platform-threadx",
    "packages/core/nros-platform-zephyr",
    # Platform shims for RMW backends
    "packages/zpico/zpico-platform-shim",
    "packages/xrce/xrce-platform-shim",
    # PX4 RMW backend (uORB transport) + board crate
    "packages/px4/nros-rmw-uorb",
    "packages/px4/nros-px4",
]

# Excluded from workspace — standalone packages and third-party forks
exclude = [
    # dust-dds fork (has its own workspace root)
    "packages/dds/dust-dds",
    # rcl-interfaces parent package (metadata only, no Rust targets)
    "packages/interfaces/rcl-interfaces",
    # lifecycle-msgs parent package (metadata only, no Rust targets)
    "packages/interfaces/lifecycle-msgs",
    # Examples are standalone packages that generate their own bindings
    # Native Rust examples (desktop/Linux)
    "examples/native/rust/zenoh/talker",
    "examples/native/rust/zenoh/listener",
    "examples/native/rust/zenoh/lifecycle-node",
    "examples/native/rust/zenoh/custom-msg",
    "examples/native/rust/zenoh/service-server",
    "examples/native/rust/zenoh/service-client",
    "examples/native/rust/zenoh/async-service-client",
    "examples/native/rust/zenoh/action-server",
    "examples/native/rust/zenoh/action-client",
    "examples/native/rust/zenoh/async-action-client",
    "examples/native/rust/zenoh/fairness-bench",
    "examples/native/rust/zenoh/stress-test",
    "examples/native/rust/zenoh/rtic-talker",
    "examples/native/rust/zenoh/rtic-listener",
    "examples/native/rust/zenoh/rtic-service-server",
    "examples/native/rust/zenoh/rtic-service-client",
    "examples/native/rust/zenoh/rtic-action-server",
    "examples/native/rust/zenoh/rtic-action-client",
    # Native DDS examples
    "examples/native/rust/dds/talker",
    "examples/native/rust/dds/listener",
    "examples/native/rust/dds/service-server",
    "examples/native/rust/dds/service-client",
    "examples/native/rust/dds/action-server",
    "examples/native/rust/dds/action-client",
    # QEMU ARM examples (bare-metal Cortex-M3)
    "examples/qemu-arm-baremetal/rust/zenoh/talker",
    "examples/qemu-arm-baremetal/rust/zenoh/listener",
    "examples/qemu-arm-baremetal/rust/core/cdr-test",
    "examples/qemu-arm-baremetal/rust/core/wcet-bench",
    "examples/qemu-arm-baremetal/rust/zenoh/large-msg-test",
    "examples/qemu-arm-baremetal/rust/standalone/lan9118",
    "examples/qemu-arm-baremetal/rust/zenoh/rtic-talker",
    "examples/qemu-arm-baremetal/rust/zenoh/rtic-listener",
    "examples/qemu-arm-baremetal/rust/zenoh/rtic-service-server",
    "examples/qemu-arm-baremetal/rust/zenoh/rtic-service-client",
    "examples/qemu-arm-baremetal/rust/zenoh/rtic-action-server",
    "examples/qemu-arm-baremetal/rust/zenoh/rtic-action-client",
    "examples/qemu-arm-baremetal/rust/zenoh/rtic-mixed-talker",
    "examples/qemu-arm-baremetal/rust/zenoh/rtic-mixed-listener",
    "examples/qemu-arm-baremetal/rust/zenoh/serial-talker",
    "examples/qemu-arm-baremetal/rust/zenoh/serial-listener",
    "examples/qemu-arm-baremetal/rust/dds/talker",
    "examples/qemu-arm-baremetal/rust/dds/listener",
    # QEMU ARM FreeRTOS examples (Cortex-M3 + FreeRTOS + lwIP)
    "examples/qemu-arm-freertos/rust/zenoh/talker",
    "examples/qemu-arm-freertos/rust/zenoh/listener",
    "examples/qemu-arm-freertos/rust/zenoh/service-server",
    "examples/qemu-arm-freertos/rust/zenoh/service-client",
    "examples/qemu-arm-freertos/rust/zenoh/action-server",
    "examples/qemu-arm-freertos/rust/zenoh/action-client",
    # Phase 97.4.freertos — DDS variant (board crate built with
    # `default-features = false` to drop the zenoh-pico C transport).
    "examples/qemu-arm-freertos/rust/dds/talker",
    "examples/qemu-arm-freertos/rust/dds/listener",
    # QEMU ARM NuttX examples (Cortex-M3 + NuttX)
    "examples/qemu-arm-nuttx/rust/zenoh/talker",
    "examples/qemu-arm-nuttx/rust/zenoh/listener",
    "examples/qemu-arm-nuttx/rust/zenoh/service-server",
    "examples/qemu-arm-nuttx/rust/zenoh/service-client",
    "examples/qemu-arm-nuttx/rust/zenoh/action-server",
    "examples/qemu-arm-nuttx/rust/zenoh/action-client",
    # NuttX DDS (Phase 97.4.nuttx)
    "examples/qemu-arm-nuttx/rust/dds/talker",
    "examples/qemu-arm-nuttx/rust/dds/listener",
    # STM32F4 examples
    "examples/stm32f4/rust/zenoh/talker",
    "examples/stm32f4/rust/zenoh/polling",
    "examples/stm32f4/rust/zenoh/rtic-talker",
    "examples/stm32f4/rust/zenoh/rtic-listener",
    "examples/stm32f4/rust/zenoh/rtic-service-server",
    "examples/stm32f4/rust/zenoh/rtic-service-client",
    "examples/stm32f4/rust/zenoh/rtic-action-server",
    "examples/stm32f4/rust/zenoh/rtic-action-client",
    "examples/stm32f4/rust/core/embassy",
    "examples/stm32f4/rust/standalone/smoltcp",
    # Zephyr examples
    "examples/zephyr/rust/zenoh/talker",
    "examples/zephyr/rust/zenoh/listener",
    "examples/zephyr/rust/zenoh/service-server",
    "examples/zephyr/rust/zenoh/service-client",
    "examples/zephyr/rust/zenoh/action-server",
    "examples/zephyr/rust/zenoh/action-client",
    "examples/zephyr/rust/zenoh/async-service-client",
    # Zephyr XRCE examples (require Zephyr workspace + XRCE Agent)
    "examples/zephyr/rust/xrce/talker",
    "examples/zephyr/rust/xrce/listener",
    "examples/zephyr/rust/xrce/service-server",
    "examples/zephyr/rust/xrce/service-client",
    "examples/zephyr/rust/xrce/action-server",
    "examples/zephyr/rust/xrce/action-client",
    # Zephyr DDS examples (Phase 71.8 — require Zephyr workspace)
    "examples/zephyr/rust/dds/talker",
    "examples/zephyr/rust/dds/listener",
    "examples/zephyr/rust/dds/service-server",
    "examples/zephyr/rust/dds/service-client",
    "examples/zephyr/rust/dds/action-server",
    "examples/zephyr/rust/dds/action-client",
    "examples/zephyr/rust/dds/async-service-client",
    # No Cargo.toml in cpp/c examples (Zephyr cmake builds them)
    # Reference implementations (library, not an example)
    "packages/reference/qemu-smoltcp-bridge",
    # smoltcp network provider (embedded-only, requires cross-compilation)
    "packages/drivers/nros-smoltcp",
    # Shared bare-metal helpers (PRNG, sleep, libc stubs) — embedded-only
    "packages/drivers/nros-baremetal-common",
    # lwIP BSD socket bindings for FreeRTOS (requires FREERTOS_DIR + LWIP_DIR)
    "packages/drivers/freertos-lwip-sys",
    # NetX Duo BSD socket bindings for ThreadX (requires THREADX_DIR + NETX_DIR)
    "packages/drivers/threadx-netx-sys",
    # NuttX POSIX socket bindings (requires NUTTX_DIR)
    "packages/drivers/nuttx-sys",
    # Zephyr POSIX socket bindings (requires ZEPHYR_BUILD_DIR)
    "packages/drivers/zephyr-posix-sys",
    # Serial (UART) link layer (embedded-only, requires cross-compilation)
    "packages/zpico/zpico-serial",
    # CMSDK UART driver (embedded-only, Cortex-M)
    "packages/drivers/cmsdk-uart",
    # STM32F4 USART driver (embedded-only, Cortex-M)
    "packages/drivers/stm32f4-usart",
    # XRCE-DDS RMW backend (embedded-only, requires xrce-sys linking)
    "packages/xrce/nros-rmw-xrce",
    # Native XRCE-DDS examples (requires XRCE Agent)
    "examples/native/rust/xrce/talker",
    "examples/native/rust/xrce/listener",
    "examples/native/rust/xrce/service-server",
    "examples/native/rust/xrce/service-client",
    "examples/native/rust/xrce/action-server",
    "examples/native/rust/xrce/action-client",
    "examples/native/rust/xrce/serial-talker",
    "examples/native/rust/xrce/serial-listener",
    "examples/native/rust/xrce/large-msg-test",
    "examples/native/rust/xrce/stress-test",
    # Board crates (embedded-only, require cross-compilation)
    "packages/boards/mps2-an385-pac",
    "packages/boards/nros-board-mps2-an385",
    "packages/platforms/nros-platform-mps2-an385",
    "packages/platforms/nros-platform-stm32f4",
    "packages/platforms/nros-platform-esp32",
    "packages/platforms/nros-platform-esp32-qemu",
    "packages/boards/nros-board-esp32",
    "packages/boards/nros-board-esp32-qemu",
    "packages/boards/nros-board-stm32f4",
    "packages/boards/nros-board-nuttx-qemu-arm",
    "packages/boards/nros-board-mps2-an385-freertos",
    "packages/boards/nros-board-threadx-linux",
    "packages/boards/nros-board-threadx-qemu-riscv64",
    # ThreadX Linux examples (require ThreadX + NetX Duo SDKs)
    "examples/threadx-linux/rust/zenoh/talker",
    "examples/threadx-linux/rust/zenoh/listener",
    "examples/threadx-linux/rust/zenoh/service-server",
    "examples/threadx-linux/rust/zenoh/service-client",
    "examples/threadx-linux/rust/zenoh/action-server",
    "examples/threadx-linux/rust/zenoh/action-client",
    # ThreadX-Linux DDS (Phase 97.4.threadx-linux)
    "examples/threadx-linux/rust/dds/talker",
    "examples/threadx-linux/rust/dds/listener",
    # ThreadX QEMU RISC-V examples (require ThreadX + NetX Duo SDKs + RISC-V toolchain)
    "examples/qemu-riscv64-threadx/rust/zenoh/talker",
    "examples/qemu-riscv64-threadx/rust/zenoh/listener",
    "examples/qemu-riscv64-threadx/rust/zenoh/service-server",
    "examples/qemu-riscv64-threadx/rust/zenoh/service-client",
    "examples/qemu-riscv64-threadx/rust/zenoh/action-server",
    "examples/qemu-riscv64-threadx/rust/zenoh/action-client",
    # ThreadX QEMU RISC-V DDS (Phase 97.4.threadx-riscv64)
    "examples/qemu-riscv64-threadx/rust/dds/talker",
    "examples/qemu-riscv64-threadx/rust/dds/listener",
    # ESP32 crates (RISC-V, require nightly + esp-hal)
    "packages/drivers/openeth-smoltcp",
    # ESP32 examples (RISC-V, require nightly + esp-hal)
    "examples/esp32/rust/standalone/hello-world",
    "examples/esp32/rust/zenoh/talker",
    "examples/esp32/rust/zenoh/listener",
    "examples/qemu-esp32-baremetal/rust/zenoh/talker",
    "examples/qemu-esp32-baremetal/rust/zenoh/listener",
    "examples/qemu-esp32-baremetal/rust/dds/talker",
    "examples/qemu-esp32-baremetal/rust/dds/listener",
    # PX4 examples — built into PX4 binary via px4_rust_module(); not part of
    # nano-ros's host workspace.
    "examples/px4/rust/uorb/talker",
    "examples/px4/rust/uorb/listener",
    # Verus verification crate (requires Verus toolchain, excluded from workspace)
    "packages/verification/nros-verification",
    # PX4 vendored sources (submodules under third-party/px4/). Each has
    # its own workspace / build system; excluded so cargo doesn't try to
    # absorb their crates into nano-ros's workspace.
    "third-party/px4/px4-rs",
    "third-party/px4/PX4-Autopilot",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NEWSLabNTU/nano-ros"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates — version required for crates.io; path used locally.
nros-core = { version = "0.1.0", path = "packages/core/nros-core", default-features = false }
nros-serdes = { version = "0.1.0", path = "packages/core/nros-serdes", default-features = false }
nros-macros = { version = "0.1.0", path = "packages/core/nros-macros" }
nros-params = { version = "0.1.0", path = "packages/core/nros-params", default-features = false }
nros-rmw = { version = "0.1.0", path = "packages/core/nros-rmw", default-features = false }
nros-rmw-zenoh = { version = "0.1.0", path = "packages/zpico/nros-rmw-zenoh", default-features = false }
nros-rmw-xrce = { version = "0.1.0", path = "packages/xrce/nros-rmw-xrce", default-features = false }
nros-rmw-dds = { version = "0.1.0", path = "packages/dds/nros-rmw-dds", default-features = false }
nros-rmw-cffi = { version = "0.1.0", path = "packages/core/nros-rmw-cffi", default-features = false }
nros-node = { version = "0.1.0", path = "packages/core/nros-node", default-features = false }
nros-sizes-build = { version = "0.1.0", path = "packages/core/nros-sizes-build" }
nros-platform = { version = "0.1.0", path = "packages/core/nros-platform", default-features = false }
nros-platform-cffi = { version = "0.1.0", path = "packages/core/nros-platform-cffi", default-features = false }
nros-platform-posix = { version = "0.1.0", path = "packages/core/nros-platform-posix", default-features = false }
nros-platform-freertos = { version = "0.1.0", path = "packages/core/nros-platform-freertos" }
nros-platform-nuttx = { version = "0.1.0", path = "packages/core/nros-platform-nuttx" }
nros-platform-threadx = { version = "0.1.0", path = "packages/core/nros-platform-threadx" }
nros-platform-zephyr = { version = "0.1.0", path = "packages/core/nros-platform-zephyr" }
zpico-platform-shim = { version = "0.1.0", path = "packages/zpico/zpico-platform-shim", default-features = false }
xrce-platform-shim = { version = "0.1.0", path = "packages/xrce/xrce-platform-shim", default-features = false }
zpico-sys = { version = "0.1.0", path = "packages/zpico/zpico-sys", default-features = false }
zpico-alloc = { version = "0.1.0", path = "packages/zpico/zpico-alloc" }
xrce-sys = { version = "0.1.0", path = "packages/xrce/xrce-sys", default-features = false }

# no_std compatible
heapless = "0.8"
embedded-io = "0.6"

# Serialization
byteorder = { version = "1.5", default-features = false }

# Proc macros
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# Optional std dependencies
thiserror = "1"

# Embedded runtime (QEMU testing)
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = { version = "0.6", features = ["exit"] }
panic-halt = "1.0"
qemu-exit = "3.0"

# Logging
log = { version = "0.4", default-features = false }
env_logger = "0.11"

# Embedded logging
defmt = "0.3"
defmt-rtt = "0.4"

# FFI / C interop
cty = "0.2"

# ---------------------------------------------------------------------------
# Workspace-wide lint configuration. Member crates opt in with
# `[lints] workspace = true`. Replaces the ad-hoc CLIPPY_LINTS string the
# justfile used to pass on the command line.
# ---------------------------------------------------------------------------
[workspace.lints.rust]
warnings = "deny"
# Whitelist cfg flags consumed by the workspace's verifiers / codegen tools
# (Kani for bounded model checking, cbindgen for C header generation,
# zpico_backend for the zenoh-pico backend selector). Combined here so
# each crate can opt in via `[lints] workspace = true` without needing
# its own per-crate `[lints.rust] unexpected_cfgs` override.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(kani)',
    'cfg(cbindgen)',
    'cfg(verus_keep_ghost)',
    'cfg(verus_keep_ghost_body)',
    'cfg(zpico_backend, values("posix", "zephyr", "bare-metal", "freertos", "nuttx", "threadx"))',
] }

[workspace.lints.clippy]
infinite_iter = "deny"
while_immutable_condition = "deny"
never_loop = "deny"
empty_loop = "deny"
unconditional_recursion = "deny"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"

[profile.release]
opt-level = "s"      # Optimize for size
# `lto = true` makes rustc emit each rlib's codegen units as LLVM
# bitcode .rcgu.o members. The `nros-sizes-build` probe parses rlib
# members as ELF objects via the `object` crate, which cannot read
# bitcode, so every `__NROS_SIZE_*` symbol comes back as 0 — see
# Phase 89.3. With `lto = "off"` the rlib contains native objects
# and the probe recovers the correct `size_of::<T>()` values, which
# nros-cpp uses to size `alignas(…) uint8_t storage_[…]` buffers
# for ActionClient / ActionServer / Executor. The binary-size cost
# is small in practice and can be revisited by a future sizes-probe
# that reads bitcode directly.
lto = "off"
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary, no unwinding

[profile.dev]
opt-level = 1        # Some optimization even in dev for embedded

# Patches for generated crates that use version = "*"
[patch.crates-io]
nros-core = { path = "packages/core/nros-core" }
nros-serdes = { path = "packages/core/nros-serdes" }
